maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:20: error: Unit does not take parameters
    right()()
           ^